fixed annoying bouncing between short and long pages caused by scrollbars

--- a/assets/css/critical.css
+++ b/assets/css/critical.css
@@ -251,6 +251,15 @@
 	}
 }
 
+html { 
+	/* font-size: 100%;  */
+	font-size: var(--rem); 
+	background: var(--cbg); 
+	/* min-height: 105vh; */
+	scrollbar-gutter: stable both-edges;
+}
+
+
 body {
 	font-size: var(--rem); 
 	position: relative;
